# Music-Graph

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_user_artist_stats.py  0003_liked_artists.py  0004_user_agreements.py
backend/app/: main.py
backend/app/api/: auth.py  friends.py  graph.py  playlists.py  router.py  sync.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  friends.py  graph.py  playlist.py  sync.py
backend/app/services/: auth_service.py  friend_service.py  graph_service.py  playlist_service.py  sync_service.py  yandex_music_service.py
backend/app/workers/: sync_worker.py
backend/music_graph_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_graph_service.py  test_yandex_music_service.py
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  legal.ts  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: FriendsPanel.tsx  GraphCanvas.tsx  LoginScreen.tsx  PlaylistPanel.tsx  SyncPanel.tsx
frontend/src/styles/: app.css
frontend/src/types/: api.ts
